--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,11 @@
 {
-    "name": "Azure CAF rover",
+    "name": "Azure CAF Virtual Network",
  
     // Update the 'dockerComposeFile' list if you have more compose files or use different names.
     "dockerComposeFile": "docker-compose.yml",
+
+    // Container user to use in VSCode Online and GitHub Codespaces
+    "containerUser" : "vscode",
  
     // The 'service' property is the name of the service for the container that VS Code should
     // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
@@ -15,8 +18,10 @@
     // Use 'settings' to set *default* container specific settings.json values on container create. 
     // You can edit these settings after create using File > Preferences > Settings > Remote.
     "settings": { 
-        // If you are using an Alpine-based image, change this to /bin/ash
-        "terminal.integrated.shell.linux": "/bin/bash"
+        "files.eol": "\n",
+        "terminal.integrated.shell.linux": "/bin/bash",
+        "editor.tabSize": 2,
+        "terminal.integrated.scrollback": 8000,
     },
  
     // Uncomment the next line if you want start specific services in your Docker Compose config.
@@ -26,7 +31,7 @@
     // "shutdownAction": "none",
  
     // Uncomment the next line to run commands after the container is created.
-    "postCreateCommand": "cp -R /tmp/.ssh-localhost/* ~/.ssh && chmod 700 ~/.ssh && chmod 600 ~/.ssh/*",
+    "postCreateCommand": "cp -R /tmp/.ssh-localhost/* ~/.ssh && sudo chmod 600 ~/.ssh/* && sudo chown -R $(whoami) /tf/caf && git config --global core.editor vi",
  
     // Add the IDs of extensions you want installed when the container is created in the array below.
     "extensions": [
